<resources>
    <string name="app_name">Actual Time</string>
    <string name="about">About</string>
    <string name="time_sys">System Time</string>
    <string name="longitude">Current Longitude</string>
    <string name="time_act">Calculated Time</string>
    <string name="time_diff">Time Difference</string>
    <string name="unknown">Unknown</string>
    <string name="app_info">&#169; 2019&#8211;2019 PC Chin</string>
    <string name="license">License</string>
    <string name="accuracy">To improve accuracy, turn on GPS</string>
    <string name="license_text">Licensed under the Apache License, Version 2.0 (the "License");
        &lt;br/&gt;&lt;br/&gt;
        you may not use this file except in compliance with the License.
        You may obtain a copy of the License at
        &lt;br/&gt;&lt;br/&gt;
        &lt;a href="http://www.apache.org/licenses/LICENSE-2.0"&gt;The Apache Software Foundation
        &lt;/a&gt;
        &lt;br/&gt;&lt;br/&gt;
        Unless required by applicable law or agreed to in writing, software
        distributed under the License is distributed on an "AS IS" BASIS,
        WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
        See the License for the specific language governing permissions and
        limitations under the License.
        &lt;br/&gt;&lt;br/&gt;
        Libraries used:
        &lt;br/&gt;&lt;a href="https://github.com/JakeWharton/ThreeTenABP"&gt;ThreeTen Android Backport - Jake Wharton
        &lt;/a&gt;
    </string>
</resources>